--- a/EntGuild/appsettings.json
+++ b/EntGuild/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "EntGuildContext": "Server=(localdb)\\mssqllocaldb;Database=StoreDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "EntGuildContext": "Server=(localdb)\\mssqllocaldb;Database=StoreDB;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "ApplicationDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=EntGuild;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
