jkfdhvjkdgjkf dhgkfsdgh khjfd gbkhjfdbgkjfsd bkjl

--- a/EntGuild/appsettings.json
+++ b/EntGuild/appsettings.json
@@ -7,7 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "EntGuildContext": "Server=(localdb)\\mssqllocaldb;Database=StoreDB;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "ApplicationDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=EntGuild;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "EntGuildContextConnection": "Server=(localdb)\\mssqllocaldb;Database=StoreDB;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
